--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "swiper": "^11.1.1",
     "uuid": "^9.0.1",
